--- a/todo.txt
+++ b/todo.txt
@@ -30,6 +30,7 @@ Engineering Tasks:
 To Do on current task:
 - Handle 'medium' returned by IE 8 when there is no border size
 - Deal with smoke tests
+- Refactor checkStyle
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
