--- a/todo.txt
+++ b/todo.txt
@@ -24,14 +24,11 @@ Potential future stories:
 - quality user-facing site design
 
 Engineering Tasks:
-- Modify HtmlElement relativeOffset() to account for margin, borders, and padding
-- Modify HtmlElement pageOffset() to account for margin, borders, and padding
+* Modify HtmlElement pageOffset() to account for margin, borders, and padding
 
 To Do on current task:
-- Handle 'medium' returned by IE 8 when there is no border size
-- Doublecheck that 'medium' === 3px on IE8 (and "thin" and "thick" too)
-- Deal with smoke tests
 - Refactor checkStyle
+- Clean up beforeEach/afterEach in coordinate conversion tests
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
