--- a/todo.txt
+++ b/todo.txt
@@ -24,7 +24,11 @@ Potential future stories:
 - quality user-facing site design
 
 Engineering Tasks:
+BEFORE NEXT EPISODE:
+  - mail bag. Review chapter comments and discuss some on air. (Particularly fail fast question)
 * Modify HtmlElement pageOffset() to account for margin, borders, and padding
+- Update WebStorm, module dependencies
+- Integrate
 
 To Do on current task:
 - Refactor checkStyle
