--- a/todo.txt
+++ b/todo.txt
@@ -12,10 +12,11 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories to finish current MMF:
-* Professional design work
-- Implement design
+* Implement design
 
 Potential future stories:
+- "Try me" text in drawing area
+- Responsive design
 - Site monitoring and logging
 - Performance
   - Note: serious performance degradation in IE 8 as more lines drawn
@@ -24,9 +25,9 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* Basic typography & colors - right personality
-- Make drawing area main focus of the app (includes layout)
-- Consider "measure" - length of each line
+- test-driven CSS
+
+expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
 -
