Attempting to load CSS from a file in tests

--- a/todo.txt
+++ b/todo.txt
@@ -34,13 +34,13 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-- Spike testing CSS
+* Spike testing CSS
 - Consider whether/how to support IE 8?
 
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-- Load real CSS from a file
+* Load real CSS from a file
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
