--- a/todo.txt
+++ b/todo.txt
@@ -34,7 +34,10 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* Spike testing CSS
+* Implement each design element
+- backgroundColorOf() -- how should it deal with hex values? (use assertion style rather than expect style?)
+- Test that style sheet is actually being loaded by index.html
+- Need to cache-bust stylesheet
 
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
