--- a/todo.txt
+++ b/todo.txt
@@ -38,11 +38,12 @@ Engineering Tasks:
 - backgroundColorOf() -- how should it deal with hex values? (use assertion style rather than expect style?)
 - Test that style sheet is actually being loaded by index.html
 - Need to cache-bust stylesheet
+- Confirm that styling works cross-platform
 
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-- Get stylesheet working on index.html
+* Get stylesheet working on index.html
 - Implement headline
 
 Notes:
