--- a/todo.txt
+++ b/todo.txt
@@ -47,6 +47,7 @@ Goal: expect(css("myHeadline").isCentered()).to.be(true)
 To Do on current task:
 - BEFORE NEXT EPISODE:
   - Michal Svoboda's E215 comment re centered elements
+  - Upgraded PhantomJS 1.9.7-3 --> 1.9.7-9 & Karma 0.12.9 --> 0.12.16
 * Color tagline
 - Adjust spacing between tagline and logo
 - Fix ugliness in "center" assertions ("isTextCenteredOnPage"?)
