--- a/todo.txt
+++ b/todo.txt
@@ -45,7 +45,7 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-* Adjust spacing between tagline and logo
+* Font size for tagline
 - Font size for logo
 - Color tagline
 - Fix ugliness in "center" assertions ("isTextCenteredOnPage"?)
