--- a/todo.txt
+++ b/todo.txt
@@ -13,10 +13,7 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories to finish current MMF:
-* Footer's call to action
-- Footer's "Join Us" button moved to position
-  - Use <a> not <button> as suggested by Laurent Bourgault-Roy in E221 comments
-- "Clear" and "Join Me" buttons styled properly
+* "Clear" and "Join Me" buttons styled properly
 - Drawing area width (including centering & testing cases where drawing area is wider/narrower than browser)
 - Drawing area arrow and button need to be above the drawing area
 - Rounded corners on drawing area
