--- a/todo.txt
+++ b/todo.txt
@@ -51,10 +51,8 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-* drop shadow on Join Us button
 - fix 'Join Us' text
-  - center vertically
-  - no underline
+  * no underline
   - all caps
 - fix colors of Join Us button to match sample screen shot
 - Deal with :hover and :visited pseudo-classes
