--- a/todo.txt
+++ b/todo.txt
@@ -51,12 +51,10 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-- fix 'Join Us' text
-  * no underline
-  - all caps
 - remove duplication of "toDomElement()" in all getComputedStyle calls
-- fix colors of Join Us button to match sample screen shot
 - Deal with :hover and :visited pseudo-classes
+- fix colors of Join Us button to match sample screen shot
+- Is 'join us' text vertically centered correctly?
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
