--- a/todo.txt
+++ b/todo.txt
@@ -51,8 +51,8 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-- remove duplication of "toDomElement()" in all getComputedStyle calls
-- Deal with :hover and :visited pseudo-classes
+* :hover
+- :visited
 - fix colors of Join Us button to match sample screen shot
 - Is 'join us' text vertically centered correctly?
 
