--- a/todo.txt
+++ b/todo.txt
@@ -54,6 +54,7 @@ Goal: expect(css("myHeadline").isCentered()).to.be(true)
 To Do on current task:
 - Pseudoclasses
   * :active
+    - Restore 'join us' link
   - :focus?
   - :visited?
   - :link?
